--- a/Convolution/CMakeLists.txt
+++ b/Convolution/CMakeLists.txt
@@ -4,8 +4,9 @@ project(LearnBANG-Convolution VERSION 0.1.0 LANGUAGES C CXX)
 
 # 设置 NEUWARE_HOME 变量
 set(NEUWARE_HOME "/usr/local/neuware")
-
-include_directories("${PROJECT_SOURCE_DIR}/include")
+# 设置使用 c++ 11 版本
+set(CMAKE_CXX_STANDARD 11)
+#include_directories("${PROJECT_SOURCE_DIR}/include")
 
 # 如果存在 NEUWARE_HOME 那么就设置相应的 头文件目录、库文件目录
 if(EXISTS ${NEUWARE_HOME})
@@ -14,6 +15,7 @@ if(EXISTS ${NEUWARE_HOME})
   link_directories("${NEUWARE_HOME}/lib64")
   link_directories("${NEUWARE_HOME}/lib")
   set(NEUWARE_ROOT_DIR "${NEUWARE_HOME}")
+  
 else()
   message(FATAL_ERROR "NEUWARE directory cannot be found, refer README.md to prepare NEUWARE_HOME environment.")
 endif()
@@ -41,6 +43,8 @@ else()
   set(BANG_CNCC_FLAGS "${BANG_CNCC_FLAGS} -fPIC -Wall")
   #set(BANG_CNCC_FLAGS "${BANG_CNCC_FLAGS} --bang-mlu-arch=mtp_220")
   set(BANG_CNCC_FLAGS "${BANG_CNCC_FLAGS} --bang-mlu-arch=mtp_270")
+  # 设置 CNCC 的 c++ 版本
+  set(BANG_CNCC_FLAGS "${BANG_CNCC_FLAGS} -std=c++17")
   #set(BANG_CNCC_FLAGS "${BANG_CNCC_FLAGS} --bang-mlu-arch=mtp_290")
   #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L/usr/local/neuware/lib64/ -lcnrt")
   set(BANG_EXIST ON)
